Layout Bug: Buttons im Fullcalendar
Closes #4872

Merge request studip/studip!3649

--- a/resources/assets/stylesheets/fullcalendar.scss
+++ b/resources/assets/stylesheets/fullcalendar.scss
@@ -21,11 +21,9 @@ a.fc-event, td.fc-event {
 
         .fc-button {
             @include button();
-            border-radius: 0;
-
             margin-top: 0;
             margin-bottom: 0;
-            padding: 5px 20px;
+            padding: 0;
 
             &:last-of-type {
                 margin-right: 0;
